[MOD] side-card alignment issues

--- a/admin/owner/css/main.css
+++ b/admin/owner/css/main.css
@@ -206,8 +206,8 @@ body {
 .vet-icon {
   display: inline-block;
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   overflow: hidden;
   border-radius: 50%;
 }
@@ -264,6 +264,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
   padding: 12px 0px;
   margin: 12px 0px;
   position: relative;
